# eldritch-text-injector

./: README.md  base-readme.md  eldritch.md  pyproject.toml  run_text.py  setup.py
eldritch-text-injector/: eldritch.md
eldritch_text_injector/: mapping.py  textWrangler.py
files/: eldritch.txt  input.txt  mapping.py
md/: base-readme.md  eldritch.md
