[tool.poetry]
name = "eldritch-text-injector"
version = "0.1.0"
description = "inject nonstandard ASCII characters into strings to make funny sentences"
authors = ["Cameron Doyle <cdoyle305@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
